@@ -11,6 +11,7 @@ CAWeb 1.13.0
 - Social media show in header option has been removed
 - Geo Locator option has been removed
 - Added theme argument to wp_nav_menu filter to prevent duplicate menus from rendering
+- Added samesite, secure, httponly flags to Alerts
 
 CAWeb 1.12.4
 - Resolved issue with Colorscheme option when using Customizer
